k8s/aks/k8s-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: simple-taskapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: flask
        image: nukano0522/simple-taskapp-flask-web:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: simple-taskapp
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
