k8s/aks/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-ingress
  namespace: simple-taskapp
  # annotations:
    # kubernetes.io/ingress.class: azure/application-gateway
    # 必要に応じて他のアノテーションを追加
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: proxy-service
            port:
              number: 80
